--- a/output/tailwind.css
+++ b/output/tailwind.css
@@ -760,6 +760,14 @@ video {
   width: 16.666667%;
 }
 
+.w-4\/5{
+  width: 80%;
+}
+
+.w-60{
+  width: 15rem;
+}
+
 .w-6\/12{
   width: 50%;
 }
@@ -776,8 +784,8 @@ video {
   width: 41.666667%;
 }
 
-.w-4\/5{
-  width: 80%;
+.table-auto{
+  table-layout: auto;
 }
 
 .transform{
@@ -818,20 +826,30 @@ video {
   margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
 }
 
+.space-y-1 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
+}
+
 .overflow-y-auto{
   overflow-y: auto;
+}
+
+.overflow-y-scroll{
+  overflow-y: scroll;
 }
 
 .rounded-xl{
   border-radius: 0.75rem;
 }
 
-.rounded-sm{
-  border-radius: 0.125rem;
-}
-
 .rounded-md{
   border-radius: 0.375rem;
+}
+
+.rounded-sm{
+  border-radius: 0.125rem;
 }
 
 .border{
@@ -858,6 +876,11 @@ video {
   background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
 }
 
+.bg-green-50{
+  --tw-bg-opacity: 1;
+  background-color: rgba(236, 253, 245, var(--tw-bg-opacity));
+}
+
 .bg-green-200{
   --tw-bg-opacity: 1;
   background-color: rgba(167, 243, 208, var(--tw-bg-opacity));
@@ -882,8 +905,8 @@ video {
   padding: 2rem;
 }
 
-.p-5{
-  padding: 1.25rem;
+.p-2{
+  padding: 0.5rem;
 }
 
 .py-14{
@@ -894,6 +917,11 @@ video {
 .px-10{
   padding-left: 2.5rem;
   padding-right: 2.5rem;
+}
+
+.py-5{
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
 }
 
 .py-1{
@@ -911,6 +939,22 @@ video {
   padding-right: 1.25rem;
 }
 
+.pl-2{
+  padding-left: 0.5rem;
+}
+
+.pl-10{
+  padding-left: 2.5rem;
+}
+
+.pt-5{
+  padding-top: 1.25rem;
+}
+
+.pt-2{
+  padding-top: 0.5rem;
+}
+
 .pl-5{
   padding-left: 1.25rem;
 }
@@ -925,10 +969,6 @@ video {
 
 .font-roboto{
   font-family: 'Roboto', sans-serif;
-}
-
-.font-sans{
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 .text-lg{
@@ -968,6 +1008,10 @@ video {
   font-weight: 300;
 }
 
+.font-bold{
+  font-weight: 700;
+}
+
 .uppercase{
   text-transform: uppercase;
 }
@@ -1004,6 +1048,11 @@ video {
 .text-s
         {
   font-size: 12px;
+}
+
+.hover\:bg-green-100:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgba(209, 250, 229, var(--tw-bg-opacity));
 }
 
 .hover\:bg-yellow-300:hover{
